--- a/task20.html
+++ b/task20.html
@@ -56,3 +56,31 @@
     </style>
 </head>
 <body>
+      <ul class="main-list">
+        <li class="category">
+          HTML
+          <ol class="sub-list decimal" start="10">
+            <li>Slim</li>
+            <li>Pugjs</li>
+            <li>HAML</li>
+          </ol>
+        </li>
+        <li class="category">
+          CSS
+          <ol class="sub-list roman" start="10">
+            <li>SASS</li>
+            <li>LESS</li>
+            <li>PostCSS</li>
+          </ol>
+        </li>
+        <li class="category">
+          JavaScript
+          <ul class="sub-list circle">
+            <li>Vuejs</li>
+            <li>Sveltejs</li>
+          </ul>
+        </li>
+      </ul>
+      </body>
+
+</html>
